fix(standings): stretch rating badge to fill column width

--- a/src/components/widgets/StandingsWidget/DriverRow/DriverRow.module.scss
+++ b/src/components/widgets/StandingsWidget/DriverRow/DriverRow.module.scss
@@ -137,6 +137,7 @@
 }
 
 .ratingBadge {
+  display: flex;
   width: 100%;
   max-width: 100%;
   overflow: hidden;
