--- a/src/components/widgets/primitives/RatingBadge/RatingBadge.module.scss
+++ b/src/components/widgets/primitives/RatingBadge/RatingBadge.module.scss
@@ -27,7 +27,7 @@
   align-items: center;
   padding: 0.2em 0.3em;
   font-family: $font-mono;
-  min-width: 1.8em;
+  flex: 1;
   justify-content: center;
 }
 
